css/main.css
/* ... */
.headerIcons
{
  float: right;
  padding: 0px 2px 5px 0px;
  width: 20px;
  height: 20px;
}

.backgroundRadius
{
  padding: 5px 5px 5px 5px;
  background-color: #EFF5FB;
  border-radius: 5px;
  margin-bottom: 1em;
}

.imageAbout
{
  float: right;
  margin-left: 1em;
  width: auto;
  height: 120px;
  border-radius: 2px;
}

.integrations
{

  margin-left: 1em;
  margin-right: 1em;
}

.disqusIntegration
{
  margin-top: 1em;
  margin-bottom: 1em;
  padding: 7px 7px 7px 7px;
}

.facebookIntegration
{
  padding-top: 1em;
  border-top: 4px solid #D8D8D8;
}

/* iPhone (portrait) */
@media (max-width: 767px) {
  
}

/* iPhone (landscape) */
@media only screen and (min-width: 320px) and (max-width: 767px) {

  .content { 
    text-align: left;
    width: 100%;
    margin-bottom:15px;
    float: left;
    font-size: 100%;
    padding-top: 14px;
  }

  .logo { 
    width: 100%;
    height: 200px;
    background: transparent url(http://germg.github.io/images/logo.png) no-repeat right;
    color: #888;
    padding: 0;
  }

  .posts span {
    color: #424242;
    font-family: Arial, "Courier New", monospace;
    font-size: 100%;
    float: right;
  }

  .logo .logo_text { 
    font-size: 70%;
    padding-left: 2%;
  }
  
  .logo_text h2
  {
    color: #000;
    font-weight: bold;
  }

  .sidebar
  {
    display: none;
  }

.youtube{
    width: 100%;
    height: 50px;
  }
}

